Fix navbar alignment and add account button

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -2,12 +2,13 @@
     background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
     height: 80px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     font-size: 1.2rem;
     position: sticky;
     top: 0;
     z-index: 999;
+    padding-right: 50px;
   }
   
   .navbar-container {
